--- a/AdvancedChat/src/main/resources/lang/message_es_ES.yml
+++ b/AdvancedChat/src/main/resources/lang/message_es_ES.yml
@@ -46,7 +46,7 @@ AdvancedChat:
   Empty-Msg: '&c[!] &7escribe un mensaje para enviarlo'
   Help-Msg-Use: '&7Usa &b/Msg &6<player> &e<message> &7Para enviar un mensaje privado a otro jugador'
 #
-# Este es el final del archivo... [-_-] más cosas por venir
+# Este es el final del archivo... [-_-] más cosas proximamente
 # 
 # ● Message File
 # ● Version 1.7.0
