--- a/Bukkit/src/main/resources/langs/messages.yml
+++ b/Bukkit/src/main/resources/langs/messages.yml
@@ -1,1 +1,22 @@
 Prefix: "&e[&dAdvancedChat&e]"
+NoPermission: "&cYou don't have permissions!"
+UsageMainCommand: "&7Use &9/Ac &ehelp &7for more information"
+UnknownArguments: "&cUnknown argument!"
+ReloadCommand: "&aAll plugin files have been reloaded"
+UnknownSound: "&eThe sound is not from this version or is misspelled!"
+UpdateAlert:
+  Console:
+    - "======================================-"
+    - " || The {version} is out of date"
+    - " || - Newest version: {newversion}"
+    - " || - Your version: {version}"
+    - " || - Update here on Spigot: {spigot}"
+    - " || - Update here on GitHub: {github}"
+    - "======================================-"
+  Player:
+    - "&aVersion &e{newversion} &ais now available for download"
+    - "&b&nClick &7here to go to the plugin page"
+HelpCommand:
+  - " &6&l* &9/Ac &ehelp &7shows this same message"
+  - " &6&l* &9/Ac &ereload &7reload all plugin files"
+  - " &6&l* &9/Ac &einfo &7shows plugin information like support links..."
